<resources>
    <string name="app_name">CodeLab</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="intro_text">Droid Deserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="froyo_circle">FroYo is premium self-serve frozen yogurt.</string>
    <string name="ice_cream">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="name_label_text">Name</string>
    <string name="name_input_hint">Enter Your Name</string>
    <string name="address_label">Address</string>
    <string name="edit_address_hint">Enter Your Address</string>
    <string name="contact_hint">Enter Your contact</string>
    <string name="contact_label">Contact</string>
    <string name="email_input">Enter Your Email</string>
    <string name="email_label">Email</string>
    <string name="delivery_label">Choose a delivery method</string>
    <string name="same_day_delivery">Same day messenger service</string>
    <string name="next_day_delivery">Next day ground delivery</string>
    <string name="pickup">Pickup order</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">order</string>
    <string name="action_status">Status</string>
    <string name="action_favourites">Favourites</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>

    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="action_copy">copy</string>
    <string name="action_paste">paste</string>
    <string name="action_delete">delete</string>
    <string name="action_news">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_label1">Top Stories</string>
    <string name="tab_label2">Tech News</string>
    <string name="tab_label3">Headlines</string>


</resources>