<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.codelab.MainActivity">
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_order"
        android:orderInCategory="10"
        android:title="@string/action_order"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_shopping_cart"
        />
    <item
        android:id="@+id/action_status"
        android:orderInCategory="30"
        android:title="@string/action_status"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_info"
        />
    <item
        android:id="@+id/action_favourites"
        android:orderInCategory="40"
        android:title="@string/action_favourites"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_favorite"
        />



</menu>